--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,8 @@
         <hr/>
     </body>
     <footer class="site-footer">
+        Adapted from <a href="https://github.com/bk2dcradle/researcher">this</a>
+        <br>
         <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3.0</a>
     </footer>
 
